src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Secondary_Address_Formatted__c</fullName>
        <formula>IF(Secondary_C_O__c &lt;&gt; NULL, Secondary_C_O__c &amp; BR(), &quot;&quot;) &amp; Secondary_Street__c &amp; BR() &amp; IF(Secondary_Street_2__c &lt;&gt; NULL, Secondary_Street_2__c &amp; BR(), &quot;&quot;) &amp; Secondary_City__c &amp; &quot;, &quot; &amp; Secondary_State__c &amp; &quot; &quot; &amp; Secondary_Zip__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Secondary Address Formatted</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secondary_C_O__c</fullName>
        <inlineHelpText>Add person or company in care of, if applicable.</inlineHelpText>
        <label>Secondary C/O</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secondary_City__c</fullName>
        <label>Secondary City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secondary_Country__c</fullName>
        <label>Secondary Country</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secondary_Mailing_Notes__c</fullName>
        <label>Secondary Mailing Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Secondary_State__c</fullName>
        <label>Secondary State</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secondary_Street_2__c</fullName>
        <label>Secondary Street 2</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secondary_Street__c</fullName>
        <label>Secondary Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Secondary_Type__c</fullName>
        <label>Secondary Type</label>
        <picklist>
            <picklistValues>
                <fullName>Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Primary Residence</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Secondary Residence</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vacation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Secondary_Zip__c</fullName>
        <label>Secondary Zip</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Smoker__c</fullName>
        <label>Smoker Status</label>
        <picklist>
            <picklistValues>
                <fullName>Smoker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Smoker</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Social_Security__c</fullName>
        <label>Social Security</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Suffix__c</fullName>
        <label>Suffix</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax_Estimates_Method__c</fullName>
        <label>Tax Estimates Method</label>
        <picklist>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>USPS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Website Vault</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Tax_Estimates__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tax Estimates</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Third_Address_Formatted__c</fullName>
        <formula>IF(Third_C_O__c &lt;&gt; NULL,Third_C_O__c &amp; BR(), &quot;&quot;) &amp; Third_Street__c &amp; BR() &amp; IF(Third_Street_2__c &lt;&gt; NULL, Third_Street_2__c &amp; BR(), &quot;&quot;) &amp; Third_City__c &amp; &quot;, &quot; &amp; Third_State__c &amp; &quot; &quot; &amp; Third_Zip__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Third Address Formatted</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Third_C_O__c</fullName>
        <inlineHelpText>Add person or company in care of, if applicable.</inlineHelpText>
        <label>Third C/O</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Third_City__c</fullName>
        <label>Third City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Third_Country__c</fullName>
        <label>Third Country</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Third_Mailing_Notes__c</fullName>
        <label>Third Mailing Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Third_State__c</fullName>
        <label>Third State</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Third_Street_2__c</fullName>
        <label>Third Street 2</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Third_Street__c</fullName>
        <label>Third Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Third_Type__c</fullName>
        <label>Third Type</label>
        <picklist>
            <picklistValues>
                <fullName>Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Primary Residence</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Secondary Residence</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vacation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Third_Zip__c</fullName>
        <label>Third Zip</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time_Zone__c</fullName>
        <label>Time Zone</label>
        <picklist>
            <picklistValues>
                <fullName>Eastern</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mountain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pacific</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-U.S.A.</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>US_Green_Card_Holder__c</fullName>
        <label>US Green Card Holder</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>US_Passport_Holder__c</fullName>
        <label>US Passport Holder</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>University_College_Attended__c</fullName>
        <label>University/College Attended</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Visa_Type__c</fullName>
        <label>Visa Type</label>
        <picklist>
            <picklistValues>
                <fullName>Greencard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Immigration VISA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Immigration VISA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
    </listViews>
    <listViews>
        <fullName>BirthdaysThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.BIRTHDATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Birthdays This Month</label>
    </listViews>
    <listViews>
        <fullName>MyContacts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Contacts</label>
    </listViews>
    <listViews>
        <fullName>NewLastWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Birthdate_Change_Requires_Action</fullName>
        <active>true</active>
        <description>This rule runs when the Birthdate is changed from one date value to another and forces the user to check the &quot;OK to Change Birthdate&quot; to acknowledge the impacts of changing birthdates for RMD members.</description>
        <errorConditionFormula>AND (NOT(ISNULL(Birthdate)), ISCHANGED( Birthdate),  Age_EOY__c &gt; 70,  OK_to_Change_Birthdate__c = FALSE )</errorConditionFormula>
        <errorDisplayField>OK_to_Change_Birthdate__c</errorDisplayField>
        <errorMessage>Changing the birthdate on a contact may impact RMD for this contact. You must check this box to acknowledge the change.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Deceased_Date_Greater_Than_Today</fullName>
        <active>true</active>
        <description>The Deceased Date must be less than or equal to today&apos;s date.</description>
        <errorConditionFormula>Deceased_Date__c &gt; TODAY()</errorConditionFormula>
        <errorDisplayField>Deceased_Date__c</errorDisplayField>
        <errorMessage>The Deceased Date must be less than or equal to today&apos;s date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Deceased_Date_Required_if_Deceased_is_Ch</fullName>
        <active>true</active>
        <errorConditionFormula>AND( Deceased__c = True, ISNULL( Deceased_Date__c ))</errorConditionFormula>
        <errorDisplayField>Deceased_Date__c</errorDisplayField>
        <errorMessage>A deceased date is required if the deceased checkbox is checked.</errorMessage>
    </validationRules>
</CustomObject>